--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ initial-scale=1.0" />
         <li><a href="https://fr.wikipedia.org/wiki/McLaren_Racing">Mclaren</a></li>
         <li><a href="https://fr.wikipedia.org/wiki/Mercedes_Grand_Prix">Mercedes</a></li>
         <li><a href="https://le10sport.com/formule1/f1-verstappen-hamilton-schumacher-les-plus-grandes-rivalites-de-lhistoire-622517">Rivalité</a></li>
-        <li><a href="#">Amitié</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="">Amitié</a></li>
+        <li><a href="https://www.instagram.com/lewishamilton/">Contact</a></li>
     </ul>
   </div>
   <div class="main_content">
@@ -37,19 +37,38 @@ initial-scale=1.0" />
           Pilote chez Mercedes il est le recordman du nombre de pole position, de podium, de courses terminé dans les points, de points en carrière, de tours en tête et surtout du nombre de victoire. 
           Ce qui montre sa domination totale dans ce sport avec ses 8 titres de champion du monde de formule 1.
          </p> 
-      </article>
-      
+      </article>         
+<br>
+      <article class = bloc1>
+          <img class="mclaren" src="assets/image/mclarenf1.jpg" alt="goat">
+          <h2 class="goatgraphie">  Mclaren</h2>
+          <p>
+          En 2008, il a fait encore mieux que sa première année en attaquant la saison avec vigueur dès le début,
+          accumulant certaines des victoires les plus éclatantes de sa carrière à Monaco et à Silverstone toutes deux dans des conditions torrentielles et a remporté le titre, 
+          encore une fois après une averse. dans le tout dernier virage du dernier tour de la course finale.
+          </p> 
+        </article>
+<br>
+      <article class = bloc_merco>
+          <img class="mclaren" src="assets/image/mercedes.jpg" alt="goat">
+          <h2 class="goatgraphie">  Mercedes</h2>
+          <p>
+          Lewis Hamilton est née le 7 Janvier 1985 à Stevenage. En commencant sa carrière en
+          2007 il est le meilleur pilote automobile de l'histoire, comme on pourrait le dire dans notre jargon <B>"LE GOAT"</B>.
+          Pilote chez Mercedes il est le recordman du nombre de pole position, de podium, de courses terminé dans les points, de points en carrière, de tours en tête et surtout du nombre de victoire. 
+          Ce qui montre sa domination totale dans ce sport avec ses 8 titres de champion du monde de formule 1.
+        </p>
+      </article> 
+<br>
+      <article class = riveaux>
+        <h2 class="goatgraphie"> Pendant sa carrière il a eu 2 rivaux qui ont marquer les fans:  </h2>
+          <ol>
+              <li>Nico Rosberg</li>
+              <li>Max Verstappen</li>
+          </ol>
+      </article> 
+<br>      
       <div>
-        Tout au long de sa carrière le GOAT a piloter pour 2 écurie:
-    <ul>
-        <li>Mclaren</li>
-        <li>Mercedes</li>
-      </ul>
-      Pendant sa carrière il a eu 2 rivaux qui ont marquer les fans:
-    <ol>
-        <li>Nico Rosberg</li>
-        <li>Max Verstappen</li>
-    </ol>
       <div id="slide">
         <div class="déroulant">
           <img  class="niconico" src="assets/image/nico.jpg" alt="Lewis Hamilton">
@@ -88,10 +107,11 @@ initial-scale=1.0" />
 
 
   <h3>Ferrari:</h3>
-      </div>
+
+
     </div>
   </div>
 </div>
-
+</div>
 </body>
 </html>
