--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@ initial-scale=1.0" />
           <img class="mclaren" src="assets/image/mercedes.jpg" alt="goat">
           <h2 class="goatgraphie">  Mercedes</h2>
           <p>
-          Lewis Hamilton est née le 7 Janvier 1985 à Stevenage. En commencant sa carrière en
-          2007 il est le meilleur pilote automobile de l'histoire, comme on pourrait le dire dans notre jargon <B>"LE GOAT"</B>.
-          Pilote chez Mercedes il est le recordman du nombre de pole position, de podium, de courses terminé dans les points, de points en carrière, de tours en tête et surtout du nombre de victoire. 
-          Ce qui montre sa domination totale dans ce sport avec ses 8 titres de champion du monde de formule 1.
+            L’année suivante, Mercedes profite d’un nouveau règlement et assoit sa domination sans partage. Lewis Hamilton a récolté tous les titres depuis 2014, 
+            à l’exception de 2016, saison au cours de laquelle son équipier Nico Rosberg a été sacré. Il ne reste à Hamilton qu’un titre à obtenir pour égaler le record de Michael Schumacher et deux pour devenir le pilote de F1 le plus titré de l’histoire.
         </p>
       </article> 
 <br>
